--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         body { background-color: var(--obsidian); color: #fff; font-family: 'Inter', sans-serif; overflow-x: hidden; }
         #dot-cursor { width: 8px; height: 8px; background: var(--orange); border-radius: 50%; position: fixed; pointer-events: none; z-index: 10000; mix-blend-mode: difference; }
 
-        /* Cinematic Background Engine */
+        /* Background Engine */
         .video-bg { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -2; opacity: 0.15; filter: grayscale(100%); pointer-events: none; }
         .video-bg iframe { width: 100vw; height: 56.25vw; min-height: 100vh; min-width: 177.77vh; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); }
 
@@ -23,14 +23,14 @@
         .nav-link.active, .nav-link:hover { color: var(--orange); }
         .grad-text { background: var(--gold-grad); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
         
-        /* Unified Card Sizes */
-        .card { min-width: 450px; height: 380px; background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.08); padding: 20px; transition: 0.5s; flex-shrink: 0; }
+        /* Unified Card Sizes (Waiting Room Template) */
+        .card { min-width: 480px; height: 380px; background: rgba(255,255,255,0.03); border: 1px solid rgba(255,255,255,0.08); padding: 20px; transition: 0.5s; flex-shrink: 0; display: flex; flex-direction: column; }
         .card:hover { border-color: var(--orange); transform: translateY(-10px); }
         .media-box { width: 100%; height: 260px; background: #000; overflow: hidden; position: relative; }
         .media-box iframe, .media-box img { width: 100%; height: 100%; object-fit: cover; }
 
         /* Floating Nav Arrows */
-        .side-arrow { position: fixed; top: 50%; transform: translateY(-50%); width: 50px; height: 50px; background: rgba(255,107,0,0.1); border: 1px solid var(--orange); color: var(--orange); display: flex; align-items: center; justify-content: center; font-size: 20px; cursor: pointer; z-index: 100; transition: 0.3s; }
+        .side-arrow { position: fixed; top: 55%; transform: translateY(-50%); width: 60px; height: 60px; background: rgba(255,107,0,0.1); border: 1px solid var(--orange); color: var(--orange); display: flex; align-items: center; justify-content: center; font-size: 24px; cursor: pointer; z-index: 100; transition: 0.3s; border-radius: 50%; }
         .side-arrow:hover { background: var(--orange); color: #000; }
         .arrow-left { left: 20px; }
         .arrow-right { right: 20px; }
@@ -39,12 +39,15 @@
         .hud { position: fixed; bottom: 30px; z-index: 100; mix-blend-mode: difference; font-size: 9px; text-transform: uppercase; letter-spacing: 2px; }
         .hud-left { left: 40px; }
         .hud-right { right: 40px; text-align: right; }
-        .hud-center { bottom: 15px; left: 50%; transform: translateX(-50%); opacity: 0.4; }
+        .hud-center { bottom: 15px; left: 50%; transform: translateX(-50%); opacity: 0.4; white-space: nowrap; }
         .donate-btn { position: fixed; top: 75%; right: 40px; transform: translateY(-50%) rotate(90deg); transform-origin: right; z-index: 101; border: 1px solid var(--orange); color: var(--orange); padding: 10px 25px; font-size: 10px; background: transparent; }
 
         .page-section { display: none; padding: 12vh 8vw; min-height: 100vh; position: relative; z-index: 10; }
         .page-section.active { display: block; }
         .horizontal-scroll { display: flex; overflow-x: auto; gap: 40px; scrollbar-width: none; scroll-behavior: smooth; padding: 20px 0; }
+        
+        .slideshow img { position: absolute; width: 100%; height: 100%; object-fit: cover; opacity: 0; transition: 1.5s; }
+        .slideshow img.active { opacity: 1; }
     </style>
 </head>
 <body>
@@ -56,19 +59,18 @@
     </div>
 
     <div class="hud hud-left"><p>+254 708 813 147</p><p>darwinwanjiru254@gmail.com</p></div>
-    <div class="hud hud-center uppercase">Glimpse of Heaven • Oosberg • HWC • Igiza Arts • Creative Box • Artofunnex</div>
+    <div class="hud hud-center">Glimpse of Heaven • Oosberg • HWC • Igiza Arts • Creative Box • Artofunnex • Hamptons</div>
     <div class="hud hud-right">
         <a href="https://instagram.com/glimpseofheaven.productions">INSTAGRAM</a><br>
         <a href="https://youtube.com/@glimpseofheavenproductions">YOUTUBE</a>
     </div>
-
-    <button onclick="showPage('collab')" class="donate-btn">INVEST IN VISION</button>
+    <button onclick="showPage('collab')" class="donate-btn uppercase">Invest in Vision</button>
 
     <div class="side-arrow arrow-left" onclick="scrollSection(-500)">&#8592;</div>
     <div class="side-arrow arrow-right" onclick="scrollSection(500)">&#8594;</div>
 
     <nav class="fixed top-0 w-full p-10 flex justify-between items-start">
-        <div class="text-3xl font-black grad-text tracking-tighter" onclick="showPage('home')">OOSBERG</div>
+        <div class="text-3xl font-black grad-text tracking-tighter cursor-pointer" onclick="showPage('home')">OOSBERG</div>
         <div class="flex flex-col gap-4 text-right">
             <span onclick="showPage('home')" class="nav-link active" id="n-home">Home</span>
             <span onclick="showPage('film')" class="nav-link" id="n-film">Film</span>
@@ -88,33 +90,73 @@
 
     <section id="film" class="page-section">
         <h2 class="text-6xl font-black mb-12 grad-text">FILM</h2>
+        <h3 class="text-[10px] tracking-[5px] uppercase mb-6 opacity-50">Completed Projects</h3>
         <div class="horizontal-scroll">
             <div class="card"><div class="media-box"><iframe src="https://www.youtube.com/embed/CpL2LXK1U-s?autoplay=1&mute=1"></iframe></div><p class="mt-4 text-[10px] font-bold">DRIFT (2025)</p></div>
-            <div class="card"><div class="media-box"><iframe src="https://drive.google.com/file/d/1A0AXqhuJh8xekyH41Ggu0HjyOWuMqmEg/preview?autoplay=1&mute=1"></iframe></div><p class="mt-4 text-[10px] font-bold">ME! (2025)</p></div>
-            <div class="card"><div class="media-box"><iframe src="https://www.youtube.com/embed/7sP2mw_k7RQ?autoplay=1&mute=1"></iframe></div><p class="mt-4 text-[10px] font-bold">THE MISSING PIECE</p></div>
+            <div class="card"><div class="media-box"><iframe id="me-vid" src="https://drive.google.com/file/d/1A0AXqhuJh8xekyH41Ggu0HjyOWuMqmEg/preview?autoplay=1&mute=1"></iframe></div><p class="mt-4 text-[10px] font-bold">ME! (2025)</p></div>
+            <div class="card"><div class="media-box"><iframe src="https://www.youtube.com/embed/7sP2mw_k7RQ?autoplay=1&mute=1"></iframe></div><p class="mt-4 text-[10px] font-bold">THE MISSING PIECE (2025)</p></div>
+            <div class="card"><div class="media-box slideshow" data-imgs="1qRhT-1m7cJTzyYiuRqYubrNoamhll4-6,19d9tWl1MBiETZHHte1dB_Dnh78FSdCTu"></div><p class="mt-4 text-[10px] font-bold uppercase">Strokes of Life (2024)</p></div>
+            <div class="card"><div class="media-box"><iframe src="https://drive.google.com/file/d/1eeuSZBn--bjT5vSfKEAIgjWeQyK_2VCP/preview?start=330&autoplay=1&mute=1"></iframe></div><p class="mt-4 text-[10px] font-bold uppercase">Tough Changes (2022)</p></div>
+            <div class="card"><div class="media-box"><iframe src="https://www.youtube.com/embed/OQQv0R_SV1I?autoplay=1&mute=1"></iframe></div><p class="mt-4 text-[10px] font-bold">BIASED CONJECTURE</p></div>
         </div>
+        <h3 class="text-[10px] tracking-[5px] uppercase mt-20 mb-6 opacity-50">Upcoming Projects</h3>
+        <div class="horizontal-scroll">
+            <div class="card"><div class="media-box slideshow" data-imgs="165MRSFz8YtajUhQWoC6OhInk0TLmEkwN,1qbTa10fJN9-z3l_KyX0Bw95Pphx1AuVp"></div><p class="mt-4 text-[10px] font-bold uppercase">RUN! (2026)</p></div>
+            <div class="card"><div class="media-box"><img src="https://drive.google.com/thumbnail?id=1my6FJ_mZWEqm5GADm6HZReyXZJfluTou&sz=w800"></div><p class="mt-4 text-[10px] font-bold uppercase">THE WAITING ROOM (2026)</p></div>
+        </div>
+    </section>
+
+    <section id="theatre" class="page-section">
+        <h2 class="text-6xl font-black mb-12 grad-text">THEATRE</h2>
+        <h3 class="text-[10px] tracking-[5px] uppercase mb-6 opacity-50">Completed Plays</h3>
+        <div class="horizontal-scroll">
+            <div class="card"><div class="media-box"><iframe src="https://drive.google.com/file/d/1uZE0Mu0SAsDUYOaHE0jmVUgzls1Rzze6/preview?autoplay=1&mute=1"></iframe></div><p class="mt-4 text-[10px] font-bold uppercase">The Last Confession (2025)</p></div>
+            <div class="card"><div class="media-box slideshow" data-imgs="1LnWSodQ3OWSqfJWOsXGtyteBEXoIjNZF,1UIP92GwS_XcAhTF2p8Pgc3AIKak-WYzD"></div><p class="mt-4 text-[10px] font-bold uppercase">Fractured Ties (2025)</p></div>
+            <div class="card"><div class="media-box slideshow" data-imgs="1aaOZ9eb9KrFEOIuobQy6uJQ42Zsgh9Xy,1euSwDVMs_CTsMSyTDNtKxz0TNjkFiqLr,1rD0ynxkRoPk9LtQF8VakonIewGHXgNHT"></div><p class="mt-4 text-[10px] font-bold uppercase">Die Mentions in Dimensions (2022)</p></div>
+            <div class="card"><div class="media-box slideshow" data-imgs="1PXgfxZzfPIkIDKjvO4pfxzQX9cHhxw7j,1S9kdDS26yWSGv9v4wKQDhMsoLy6B9pLr,1uw5oxBPG-Gl8feRHTr2iU-SxdB6tKZzN"></div><p class="mt-4 text-[10px] font-bold uppercase">Bravado Aficionado (2019)</p></div>
+            <div class="card"><div class="media-box"><img src="https://drive.google.com/thumbnail?id=1W_sl85fQ6-2GbHVXc14MNRafqsMBe_dN&sz=w800"></div><p class="mt-4 text-[10px] font-bold uppercase">Faced Defaced (2019)</p></div>
+            <div class="card"><div class="media-box"><img src="https://drive.google.com/thumbnail?id=1DHGok1r_3wFp5CBtQWj2NSVjsUK04eMp&sz=w800"></div><p class="mt-4 text-[10px] font-bold uppercase">Perishable Cherishables (2018)</p></div>
+            <div class="card"><div class="media-box slideshow" data-imgs="1ZfHMeB_j30bYe_C2cAbinsxMBSOoBxxw,1JR9I6dqPHWMLvGgIWO4aeQasUr7RKAUU"></div><p class="mt-4 text-[10px] font-bold uppercase">Sins and Secrets (2018)</p></div>
+            <div class="card"><div class="media-box"><img src="https://drive.google.com/thumbnail?id=1D9A4H9dBJNywLMHCdxZraiUgL57l_xLf&sz=w800"></div><p class="mt-4 text-[10px] font-bold uppercase">Affected (2020)</p></div>
+            <div class="card"><div class="media-box"><img src="https://drive.google.com/thumbnail?id=1TX5q891Jm_iEp7q94okuRPto3uN8nANO&sz=w800"></div><p class="mt-4 text-[10px] font-bold uppercase">Neighborhood Watch (2022)</p></div>
+        </div>
+        <h3 class="text-[10px] tracking-[5px] uppercase mt-20 mb-6 opacity-50">Upcoming Project</h3>
+        <div class="card"><div class="media-box bg-white/5 flex items-center justify-center p-10 text-[10px] tracking-widest text-center">THE BLACK SHEEP<br>(Stage Production)</div><p class="mt-4 text-[10px] font-bold uppercase">The Black Sheep</p></div>
     </section>
 
     <section id="photo" class="page-section">
         <h2 class="text-6xl font-black mb-12 grad-text">PHOTOGRAPHY</h2>
+        <h3 class="text-[10px] tracking-[5px] uppercase mb-6 opacity-50">Listed Works</h3>
         <div class="horizontal-scroll">
-            <div class="card"><div class="media-box"><img src="https://drive.google.com/thumbnail?id=1CJ2LJTEstTqsUoNRkZ2QhnjeMzAExc61&sz=w800"></div><p class="mt-4 text-[10px] font-bold">CALM</p></div>
-            <div class="card"><div class="media-box"><img src="https://drive.google.com/thumbnail?id=1EG3eiafN8RyCwxDTXnkezixFPAaEwDNQ&sz=w800"></div><p class="mt-4 text-[10px] font-bold">IRON</p></div>
-            <div class="card"><div class="media-box"><img src="https://drive.google.com/thumbnail?id=1LX0unSMVlrCXMqP3A5tUY15isJXeV66J&sz=w800"></div><p class="mt-4 text-[10px] font-bold">BEHOLDER</p></div>
-            <div class="card"><div class="media-box border-dashed border-white/20 flex items-center justify-center p-10 text-center text-[10px]">WHY – Photobook by Darwin Wanjiru</div><p class="mt-4 text-[10px] font-bold uppercase">WHY Project</p></div>
+            <div class="card"><div class="media-box"><img src="https://drive.google.com/thumbnail?id=1CJ2LJTEstTqsUoNRkZ2QhnjeMzAExc61&sz=w800"></div><p class="mt-4 text-[10px] font-bold uppercase">Calm</p></div>
+            <div class="card"><div class="media-box"><img src="https://drive.google.com/thumbnail?id=1EG3eiafN8RyCwxDTXnkezixFPAaEwDNQ&sz=w800"></div><p class="mt-4 text-[10px] font-bold uppercase">Iron</p></div>
+            <div class="card"><div class="media-box"><img src="https://drive.google.com/thumbnail?id=1TXlLdGgEEez27WJiqm4QZzo1gmIMVUR7&sz=w800"></div><p class="mt-4 text-[10px] font-bold uppercase">Order</p></div>
+            <div class="card"><div class="media-box"><img src="https://drive.google.com/thumbnail?id=1LX0unSMVlrCXMqP3A5tUY15isJXeV66J&sz=w800"></div><p class="mt-4 text-[10px] font-bold uppercase">Beholder</p></div>
+            <div class="card"><div class="media-box"><img src="https://drive.google.com/thumbnail?id=1M7G5OWokkkIPmHCz_TZyZJGCgIiR_cUB&sz=w800"></div><p class="mt-4 text-[10px] font-bold uppercase">Unity</p></div>
+            <div class="card"><div class="media-box"><img src="https://drive.google.com/thumbnail?id=1Mg2DkIj47N8QQ4Adyfn5M-gkjX7wn7MW&sz=w800"></div><p class="mt-4 text-[10px] font-bold uppercase">Natural</p></div>
+            <div class="card"><div class="media-box"><img src="https://drive.google.com/thumbnail?id=1WELCtmX_SMlHCtOMNUMJnkAAyCIbdkMY&sz=w800"></div><p class="mt-4 text-[10px] font-bold uppercase">Focus</p></div>
+            <div class="card"><div class="media-box"><img src="https://drive.google.com/thumbnail?id=1Lgw45_Nkear7VQSYNf189oX87yUpzuxD&sz=w800"></div><p class="mt-4 text-[10px] font-bold uppercase">Frame</p></div>
+            <div class="card"><div class="media-box"><img src="https://drive.google.com/thumbnail?id=1_Us2hseIoji9idiAwVhQRJNTOaU9Agx_&sz=w800"></div><p class="mt-4 text-[10px] font-bold uppercase">Interaction</p></div>
+            <div class="card"><div class="media-box"><img src="https://drive.google.com/thumbnail?id=1UgeewGbBXYGNmTQ29LrtnknMeT_JNaO4&sz=w800"></div><p class="mt-4 text-[10px] font-bold uppercase">Urban</p></div>
+            <div class="card"><div class="media-box"><img src="https://drive.google.com/thumbnail?id=1LdaFCwXBNmQzOrwcxh7IQOx1CbqbjbGL&sz=w800"></div><p class="mt-4 text-[10px] font-bold uppercase">People</p></div>
+            <div class="card"><div class="media-box"><img src="https://drive.google.com/thumbnail?id=1vQMPlALwePYkfRqERSq3whQkrAM4rR-A&sz=w800"></div><p class="mt-4 text-[10px] font-bold uppercase">There It Is</p></div>
         </div>
+        <h3 class="text-[10px] tracking-[5px] uppercase mt-20 mb-6 opacity-50">Upcoming Project</h3>
+        <div class="card"><div class="media-box bg-white/5 p-12 text-[10px] tracking-[4px] leading-loose text-center">WHY – A photobook by Darwin Wanjiru.<br>(Environmental Awareness)</div><p class="mt-4 text-[10px] font-bold uppercase">WHY Photobook</p></div>
     </section>
 
     <section id="collab" class="page-section">
         <h2 class="text-7xl font-black grad-text mb-12 uppercase">Collaborate</h2>
         <div class="grid md:grid-cols-2 gap-10 mb-20">
-            <div class="border border-white/10 p-12 bg-white/5"><h3 class="text-orange-500 text-[10px] mb-6">ENGAGE</h3><p class="text-[10px] mb-8">Follow for updates.</p></div>
-            <div class="border border-white/10 p-12 bg-white/5"><h3 class="text-orange-500 text-[10px] mb-6">INVEST</h3><p class="text-[10px] mb-8">Support high-impact art.</p><div class="bg-orange-600/10 p-6 border border-orange-500/30 text-[11px] font-bold uppercase">MPESA TILL: 6880821</div></div>
+            <div class="border border-white/10 p-12 bg-white/5"><h3 class="text-orange-500 text-[10px] mb-6 uppercase">Engage</h3><p class="text-[10px] mb-8 uppercase">Follow Glimpse of Heaven Productions.</p><div class="flex gap-4"><a href="https://instagram.com/glimpseofheaven.productions" class="text-[10px] border border-white/20 px-6 py-3 hover:bg-white hover:text-black">INSTAGRAM</a><a href="https://youtube.com/@glimpseofheavenproductions" class="text-[10px] border border-white/20 px-6 py-3 hover:bg-white hover:text-black">YOUTUBE</a></div></div>
+            <div class="border border-white/10 p-12 bg-white/5"><h3 class="text-orange-500 text-[10px] mb-6 uppercase">Invest</h3><p class="text-[10px] mb-8 uppercase">Support universal storytelling.</p><div class="bg-orange-600/10 p-6 border border-orange-500/30 text-[11px] font-bold uppercase tracking-widest">MPESA TILL: 6880821</div></div>
         </div>
-        <h3 class="text-[10px] tracking-[5px] uppercase opacity-50 mb-10">Proof of Work</h3>
+        <h3 class="text-[10px] tracking-[5px] uppercase opacity-50 mb-10">Evidence of Work</h3>
         <div class="horizontal-scroll">
             <div class="card"><div class="media-box"><img src="https://drive.google.com/thumbnail?id=1EG3eiafN8RyCwxDTXnkezixFPAaEwDNQ&sz=w800"></div><p class="mt-4 text-[10px] uppercase">Kreative Klinik Workshop</p></div>
+            <div class="card"><div class="media-box"><img src="https://drive.google.com/thumbnail?id=1LdaFCwXBNmQzOrwcxh7IQOx1CbqbjbGL&sz=w800"></div><p class="mt-4 text-[10px] uppercase">Igiza Arts Production Team Building</p></div>
             <div class="card"><div class="media-box"><img src="https://drive.google.com/thumbnail?id=1vQMPlALwePYkfRqERSq3whQkrAM4rR-A&sz=w800"></div><p class="mt-4 text-[10px] uppercase">APAC Youth Congress</p></div>
+            <div class="card"><div class="media-box"><img src="https://drive.google.com/thumbnail?id=1TX5q891Jm_iEp7q94okuRPto3uN8nANO&sz=w800"></div><p class="mt-4 text-[10px] uppercase">First Int. Forum of Filmmakers</p></div>
         </div>
     </section>
 
@@ -127,7 +169,7 @@
             if (activeScroll) activeScroll.scrollBy({ left: val, behavior: 'smooth' });
         }
 
-        const introText = "I am an independent international filmmaker from Kenya with a passion for producing stories that first entertain, then educate society.";
+        const introText = "I am an independent international filmmaker from Kenya with a passion for producing stories that first entertain, then educate society on issues affecting their social and economic well-being.";
         let charIdx = 0;
         function typeEffect() { if (charIdx < introText.length) { document.getElementById("typewriter").innerHTML += introText.charAt(charIdx); charIdx++; setTimeout(typeEffect, 35); } }
         window.onload = typeEffect;
@@ -139,6 +181,20 @@
             document.getElementById('n-' + id).classList.add('active');
             window.scrollTo(0,0);
         }
+
+        // Slideshow Engine
+        document.querySelectorAll('.slideshow').forEach(s => {
+            const ids = s.dataset.imgs.split(',');
+            ids.forEach((id, i) => { const img = document.createElement('img'); img.src = `https://drive.google.com/thumbnail?id=${id}&sz=w800`; if(i===0) img.classList.add('active'); s.appendChild(img); });
+            let cur = 0; const imgs = s.querySelectorAll('img');
+            setInterval(() => { if(imgs.length > 0) { imgs[cur].classList.remove('active'); cur = (cur+1)%imgs.length; imgs[cur].classList.add('active'); } }, 5000);
+        });
+
+        // Loop for ME! card (30s)
+        setInterval(() => { const me = document.getElementById('me-vid'); if(me) me.src = me.src; }, 30000);
+
+        document.addEventListener('contextmenu', e => e.preventDefault());
+        showPage('home');
     </script>
 </body>
 </html>
